--- a/references.bib
+++ b/references.bib
@@ -69,6 +69,20 @@
 
 
 
+
+@article{Excoffier2011,
+	title = {fastsimcoal: a continuous-time coalescent simulator of genomic diversity under arbitrarily complex evolutionary scenarios},
+	volume = {27},
+	doi = {10.1093/bioinformatics/btr124},
+	number = {9},
+	journal = {Bioinformatics},
+	author = {Excoffier, Laurent and Foll, Matthieu},
+	year = {2011},
+	pages = {1332--1334}
+}
+
+
+
 @article{Haller2017,
 	title = {{SLiM} 2: {Flexible}, Interactive Forward Genetic Simulations},
 	volume = {34},
@@ -128,6 +142,29 @@
     note = {R package version 1.7},
     url = {https://CRAN.R-project.org/package=abcrf},
   }
+
+
+
+@article{Navascues2017,
+	title = {Demographic inference through approximate-{Bayesian}-computation skyline plots},
+	volume = {5},
+	doi = {10.7717/peerj.3530},
+	journal = {PeerJ},
+	author = {Navascués, Miguel de and Leblois, Raphaël and Burgarella, Concetta},
+	year = {2017},
+	pages = {e3530}
+}
+
+
+
+  @Manual{Pasek2018,
+    title = {weights: Weighting and Weighted Statistics},
+    author = {Josh Pasek},
+    year = {2018},
+    note = {R package version 1.0},
+    url = {https://CRAN.R-project.org/package=weights},
+  }
+
 
 
 @article{Pudlo2016,
